fixed some layout issues w index grid and cat height

--- a/assets/css/category.scss
+++ b/assets/css/category.scss
@@ -33,9 +33,7 @@
 
         .deal-content {
             min-width: 320px;
-            min-height: 120px;
-            max-height: 220px;
-            height: 25vw;
+            min-height: 25vw;
             padding: 0 10px;
             overflow: visible;
 
