--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -3,8 +3,8 @@
 .deadDeal {
     display: none;
 }
-.deadDeal + hr{
-    display:none;
+.deadDeal + hr {
+    display: none;
 }
 /**
     DESKTOP STYLES
@@ -44,15 +44,10 @@
         grid-column-gap: 20px;
         grid-row-gap: 65px;
         justify-content: space-between;
+        justify-items: center;
         text-align: center;
         min-height: 75vh;
         cursor: pointer;
-    }
-    @media only screen and (max-width: 650px) {
-        .deals-container {
-            width:90vw;
-            grid-template-columns: repeat(2, minmax(200px, 1fr));
-        }
     }
 
     .deal-content {
@@ -142,7 +137,7 @@
             width: 100%;
             height: 100%;
             border-radius: 10px;
-            padding:20px;
+            padding: 20px;
             overflow: scroll;
             cursor: default;
 
@@ -179,7 +174,7 @@
                     width: 100%;
 
                     .price-container {
-                        flex-grow:1;
+                        flex-grow: 1;
                         display: flex;
                         align-items: flex-start;
 
@@ -193,7 +188,7 @@
                     }
 
                     .likes-container {
-                        flex-grow:1;
+                        flex-grow: 1;
                         display: flex;
                         align-items: center;
 
@@ -211,7 +206,7 @@
                     }
 
                     .dead-container {
-                        flex-grow:1;
+                        flex-grow: 1;
                         display: inline-block;
                         flex-grow: 1;
                         text-align: center;
@@ -244,18 +239,18 @@
                 .details {
                     margin-bottom: 10px;
                     background-color: inherit;
-                    font-size:.8em;
+                    font-size: 0.8em;
 
                     a {
                         text-decoration: wavy;
                         color: colors.$strikeColor;
-                        padding:0;
+                        padding: 0;
                     }
                 }
                 .link-container {
                     width: 96%;
                     margin-left: 2%;
-                    margin-bottom:20px;
+                    margin-bottom: 20px;
                     height: 5vh;
                     box-shadow: 0px 10px 14px -7px #276873;
                     background: linear-gradient(to bottom, #40e0d0 5%, #00a89a 100%);
